k3s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lookatme-d
  labels:
    app: lookatme
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lookatme
  template:
    metadata:
      labels:
        app: lookatme
    spec:
      imagePullSecrets:
        - name: regcrednheek
      containers:
        - name: lookatme
          image: reg.nheek.com/nheek/lookatme:latest
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "40Mi"
              cpu: "40m"
          readinessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 2
            timeoutSeconds: 2
            failureThreshold: 10
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 2
            failureThreshold: 10
