k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lookatme-service
  labels:
    app: lookatme
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3001
  selector:
    app: lookatme
