k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lookatme-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: lookatme.nheek.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lookatme-service
            port:
              number: 80
